- add layout component - install primeng - add form to create bookings - add list view for rooms - add list view for locals - fix layout issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-layout>
   <router-outlet></router-outlet>
 </app-layout>
+
+<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+<p-toast position="bottom-left"></p-toast>
